--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.19.0",
     "next": "14.2.16",
     "next-themes": "latest",
+    "nodemailer": "^7.0.6",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
